--- a/package.json
+++ b/package.json
@@ -25,5 +25,15 @@
     "gulp-uglify": "^2.1.2",
     "jshint": "^2.9.1",
     "mocha": "^3.3.0"
+  },
+  "wilton": {
+    "excludes": [
+      "benchmark",
+      "demo",
+      "dist",
+      "test",
+      "bower.json",
+      "gulpfile.js"
+    ]
   }
 }
